# NeoMind-Extensions

./: .gitignore  .gitmodules  Cargo.toml  DOCS.md  EXTENSION_GUIDE.md  EXTENSION_GUIDE.zh.md  Makefile  QUICKSTART.md  README.md  README.zh.md  build-package.sh  build.sh  release.sh
.github/workflows/: build-extension.yml  build-native-extensions.yml  build-nep-packages.yml
extensions/: index.json
extensions/image-analyzer/: Cargo.toml  manifest.json
extensions/image-analyzer-v2/: Cargo.toml  metadata.json
extensions/image-analyzer-v2/frontend/: frontend.json
extensions/image-analyzer-v2/src/: lib.rs
extensions/image-analyzer-v2/tests/: extension_test.rs
extensions/image-analyzer/frontend/: package.json  vite.config.ts
extensions/image-analyzer/frontend/src/: index.tsx
extensions/image-analyzer/src/: lib.rs
extensions/wasm-demo/: metadata.json
extensions/wasm-demo/src/: lib.rs
extensions/wasm-demo/tests/: extension_test.rs
extensions/weather-forecast/: Cargo.toml  manifest.json  metadata.json
extensions/weather-forecast-v2/: metadata.json
extensions/weather-forecast-v2/frontend/: frontend.json
extensions/weather-forecast-v2/src/: lib.rs
extensions/weather-forecast-v2/tests/: extension_test.rs
extensions/weather-forecast/frontend/: package.json
extensions/weather-forecast/frontend/src/: index.tsx
extensions/weather-forecast/src/: lib.rs
extensions/yolo-device-inference/: Cargo.toml  metadata.json
extensions/yolo-device-inference/frontend/: frontend.json
extensions/yolo-device-inference/frontend/src/: index.tsx
extensions/yolo-device-inference/src/: lib.rs
extensions/yolo-device-inference/tests/: extension_test.rs
extensions/yolo-video/: Cargo.toml  README.md  manifest.json
extensions/yolo-video-v2/: Cargo.toml  metadata.json
extensions/yolo-video-v2/frontend/: frontend.json
extensions/yolo-video-v2/frontend/src/: index.tsx
extensions/yolo-video-v2/src/: detector.rs  lib.rs
extensions/yolo-video-v2/tests/: unit_test.rs
extensions/yolo-video/frontend/: package.json  vite.config.ts  yolo-video-components.js
extensions/yolo-video/frontend/src/: index.tsx
extensions/yolo-video/scripts/: download-yolo11n.sh
extensions/yolo-video/src/: detector.rs  lib.rs  video_source.rs
scripts/: build-all.sh  package.sh  test_nep.py
skill/: GIT_COMMIT_CHECKLIST.md  GUIDE.md  QUICK_START.md  README.md  README.zh.md  REORGANIZATION_SUMMARY.md  SKILL_INTEGRATION_COMPLETE.md  install.sh
skill/neomind-extension/: README.md  SKILL.md
skill/neomind-extension/examples/: simple-counter.md
skill/neomind-extension/reference/: architecture.md  frontend.md  sdk-api.md
test-package/: manifest.json
test-package/frontend/: vite.config.ts  weather-card.js
