[workspace]
resolver = "2"
members = [
    "extensions/*",
]
exclude = [
    "extensions/as-hello",              # AssemblyScript project (not Rust)
    "extensions/weather-forecast-wasm", # WASM project (requires wasm32-unknown-unknown target)
    "extensions/test-dashboard-component",  # Frontend-only component (not Rust)
]

[workspace.package]
version = "0.5.8"
edition = "2021"
authors = ["CamThink"]
license = "MIT"
repository = "https://github.com/camthink-ai/NeoMind-Extensions"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
# Use relative path for local, will be symlink in CI
neomind-core = { path = "../NeoMind/crates/neomind-core" }
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
once_cell = "1.19"

# Release profile - must match main project's panic setting
[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"
