[workspace]
resolver = "2"
members = [
    # V2 extensions using unified SDK (ABI Version 3)
    "extensions/weather-forecast-v2",
    "extensions/image-analyzer-v2",
    "extensions/yolo-video-v2",
    "extensions/yolo-device-inference",
    "extensions/wasm-demo",
    # "extensions/final-test",
    # "extensions/cli-test-ext",
]
exclude = [
    "extensions/as-hello",              # AssemblyScript project (not Rust)
    "extensions/test-dashboard-component",  # Frontend-only component (not Rust)
    "extensions/weather-forecast",      # Legacy (pre-SDK)
    "extensions/image-analyzer",        # Legacy (pre-SDK)
    "extensions/yolo-video",            # Legacy (pre-SDK)
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeoMind"]
license = "MIT"

[workspace.dependencies]
# Minimal dependencies for WASM extensions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
neomind-extension-sdk = { path = "../../NeoMind/crates/neomind-extension-sdk" }

# Note: Native extensions (image-analyzer, yolo-video) require
# the full NeoMind workspace and are built locally.

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling

[profile.dev]
opt-level = 1
lto = false
panic = "unwind"  # CRITICAL: Required for safe extension unloading and panic handling