[package]
name = "weather-forecast"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[profile.release]
opt-level = "s"     # Optimize for size
lto = true          # Link-time optimization
