[package]
name = "yolo-device-inference"
version = "1.0.0"
edition = "2021"
authors = ["NeoMind Team"]
license = "MIT"
description = "YOLOv8 device inference extension with automatic detection on data source updates"

[lib]
name = "neomind_extension_yolo_device_inference"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { path = "../../../NeoMind/crates/neomind-extension-sdk" }
neomind-core = { path = "../../../NeoMind/crates/neomind-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
async-trait = "0.1"
chrono = "0.4"
semver = "1"
base64 = "0.22"
image = "0.25"
imageproc = "0.24"
rusttype = "0.9"
parking_lot = "0.12"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.0", features = ["v4"] }

# Native-only dependencies for YOLO inference
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["half"] }
usls = { version = "0.2.0-alpha.3", default-features = false, features = ["vision", "ort-download-binaries"] }

[features]
default = []

# Native extension - requires YOLO model
# This extension is NOT compatible with WASM target due to native dependencies

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }