[package]
name = "yolo-video-v2"
version = "2.0.0"
edition = "2021"
authors = ["NeoMind Team"]
license = "Apache-2.0"
description = "Real-time video processing with YOLOv11 (SDK V2 with process isolation support)"

[lib]
name = "neomind_extension_yolo_video_v2"
crate-type = ["cdylib", "rlib"]

[dependencies]
neomind-extension-sdk = { path = "../../../NeoMind/crates/neomind-extension-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
async-trait = "0.1"
chrono = "0.4"
semver = "1"
base64 = "0.22"
image = "0.25"
imageproc = "0.24"
ab_glyph = "0.2"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
once_cell = "1.19"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.11", features = ["half"] }
usls = { version = "0.2.0-alpha.3", default-features = false, features = ["vision", "annotator", "ort-download-binaries"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
nokhwa = { version = "0.10", features = ["input-native"] }
crossbeam-channel = "0.5"

[features]
default = []
native = []
wasm = []
# Process isolation feature for high-risk extensions
process-isolated = []

[profile.release]
opt-level = 3
lto = "thin"
