[package]
name = "neomind-yolo-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Real-time video stream processing with YOLO object detection and multi-protocol support"
publish = false

[lib]
name = "neomind_extension_yolo_video"
crate-type = ["cdylib"]

[dependencies]
neomind-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
image = "0.25"
imageproc = "0.24"
ndarray = "0.17"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
tracing = "0.1"

# Optional dependencies (all optional to reduce compilation issues)
ort = { version = "2.0.0-rc.11", features = ["half"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "stream"], optional = true }
dirs = { version = "5.0", optional = true }
nokhwa = { version = "0.10", features = ["input-v4l", "input-avfoundation"], optional = true }
ffmpeg-next = { version = "7.1", features = ["codec", "format"], optional = true }
rtmp = { version = "0.5", optional = true }
m3u8-rs = { version = "6.0", optional = true }
screenshots = { version = "0.7", optional = true }
bytes = "1.0"

[features]
default = ["onnx"]  # Now includes embedded model
# Core features
onnx = ["dep:ort"]
auto-download = ["dep:reqwest", "dep:dirs"]
camera = ["dep:nokhwa"]
# Protocol features
rtsp = ["dep:ffmpeg-next"]
rtmp = ["dep:rtmp"]
hls = ["dep:m3u8-rs", "dep:reqwest"]
http = ["dep:reqwest"]
file = ["dep:ffmpeg-next"]
screen = ["dep:screenshots"]
# Demo mode (no actual model, generates mock frames)
demo = []
# All protocols
all-protocols = ["rtsp", "rtmp", "hls", "http", "file", "screen"]
# Full feature set
full = ["onnx", "auto-download", "camera", "all-protocols"]
